Adiciona strings localizadas

--- a/SwiftPlaces/App/Info.plist
+++ b/SwiftPlaces/App/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>PHOTOS_API_KEY</key>
+	<string>$(PHOTOS_API_KEY)</string>
+	<key>PHOTOS_API_URL</key>
+	<string>$(PHOTOS_API_URL)</string>
+	<key>PLACES_API_URL</key>
+	<string>$(PLACES_API_URL)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>OpenSans-Light.ttf</string>
